changed math equation

--- a/2018201036_a1.ipynb
+++ b/2018201036_a1.ipynb
@@ -43,11 +43,12 @@
     "\n",
     "##### Intrinsic Parameters\n",
     "The intrinsic parameters include the focal length, the optical center, also known as the principal point, and the skew coefficient. The camera intrinsic matrix, K, is defined as:\n",
+    "$$\n",
     "\\begin{equation}\n",
     "K = \n",
     "\\left(\\begin{array}{cc} fx & 0 & u0\\\\ 0 & fy & v0\\\\ 0 & 0 & 1 \\end{array}\\right)\n",
     "\\end{equation}\n",
-    "\n",
+    "$$\n",
     "\n",
     "#### Distortion in Camera Calibration\n",
     "The camera matrix does not account for lens distortion because an ideal pinhole camera does not have a lens. To accurately represent a real camera, the camera model includes the radial and tangential lens distortion.\n",
@@ -58,9 +59,13 @@
     "\n",
     "The radial distortion coefficients model this type of distortion. The corrected points are denoted as:\n",
     "\n",
-    "$$xcorrected = x(1 + k1*r2 + k2*r4 + k3*r6)$$\n",
+    "$$\n",
+    "xcorrected = x(1 + k1*r2 + k2*r4 + k3*r6)\n",
+    "$$\n",
     "\n",
-    "$$ycorrrected = y(1 + k1*r2 + k2*r4 + k3*r6)$$"
+    "$$\n",
+    "ycorrrected = y(1 + k1*r2 + k2*r4 + k3*r6)\n",
+    "$$"
    ]
   },
   {
